[metadata]
name = texttable
author = Gerome Fournier
author_email = jef@foutaise.org
license = MIT
description = module to create simple ASCII tables
url = https://github.com/foutaise/texttable/
download_url = https://github.com/foutaise/texttable/archive/v1.6.4.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
platforms = any

[options]
py_modules = texttable
